# VehicleReIdenti

./: .gitignore  README.md  TESTING_GUIDE.md  package-lock.json
Backend/: .env.template  .gitignore  README.md  main.py  pyproject.toml
Backend/app/: __init__.py
Backend/app/api/: __init__.py
Backend/app/api/v1/: __init__.py
Backend/app/api/v1/endpoints/: artifacts.py  reid.py  system.py  video.py
Backend/app/core/: __init__.py  config.py  logging.py
Backend/app/db/: __init__.py  models.py  session.py
Backend/app/ml/: __init__.py  config.py  detector.py  feature_extractor.py  gallery_index.py  model_runner.py
Backend/app/models/: __init__.py  schemas.py
Backend/app/services/: __init__.py  video_processor.py
Backend/scripts/: run_smoke_test.py  test_api.py
Document/: LIVE_VIDEO_ANALYSIS.md  MODERN_UI_DESIGN_GUIDE.md  Todo.md
frontend/: .gitignore  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: About.tsx  Dashboard.tsx  Hero.tsx  LayoutShell.tsx  LiveAnalysis.tsx  NavBar.tsx  ReIDResults.tsx  RecentJobs.tsx  TrajectoryMap.tsx  UploadCard.tsx
frontend/app/components/ui/: Button.tsx  Card.tsx
frontend/app/lib/: api.ts
frontend/app/videos/: page.tsx
frontend/app/videos/[id]/: page.tsx
